# aws-lambda-mcp-cookbook

./: index.html
.github/workflows/: main-serverless-service.yml
best_practices/environment_variables/: index.html
best_practices/input_validation/: index.html
best_practices/logger/: index.html
best_practices/metrics/: index.html
best_practices/monitoring/: index.html
best_practices/tracer/: index.html
cdk/: index.html  pyproject.toml
cdk/service/: constants.py  fast_mcp_server_construct.py  mcp_construct.py  s3_vector.py  service_stack.py
getting_started/: index.html
layers/boto3/python/: six.py
layers/boto3/python/boto3/: __init__.py  compat.py  crt.py  exceptions.py  session.py  utils.py
layers/boto3/python/boto3-1.40.40.dist-info/: RECORD
layers/boto3/python/botocore/: __init__.py  args.py  auth.py  awsrequest.py  client.py  compat.py  compress.py  config.py  configloader.py  configprovider.py  context.py  credentials.py  discovery.py  endpoint.py  endpoint_provider.py  errorfactory.py  eventstream.py  exceptions.py  handlers.py  history.py  hooks.py  httpchecksum.py  httpsession.py  loaders.py  model.py  monitoring.py  paginate.py  parsers.py  plugin.py  regions.py  response.py  retryhandler.py  serialize.py  session.py  signers.py  stub.py  tokens.py  translate.py  useragent.py  utils.py  (+2 more)
layers/boto3/python/botocore-1.40.40.dist-info/: RECORD
pipeline/: index.html
search/: search_index.json
service/: mcp_server.py
service/handlers/: mcp.py
service/s3_vector/: s3_vector.py  s3_vector_query.py
(+111 files in other folders)
